fix linebreaks on users/sign_in

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -612,6 +612,7 @@ p, ol, ul {
   color: white;
   line-height: 24px;
   margin-bottom: 15px;
+  float: left;
 }
 
 /* line 33, ../../app/assets/stylesheets/components/homepage.scss */
@@ -1807,7 +1808,7 @@ ul.sub-nav {
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 /* line 237, ../../app/assets/stylesheets/components/general.scss */
@@ -2925,8 +2926,8 @@ li.avatar {
 
 /* line 995, ../../app/assets/stylesheets/components/general.scss */
 .avatar-big {
-  width: 190px;
-  height: 190px;
+  width: 125px;
+  height: 125px;
   margin-bottom: 10px;
   float: left;
   margin-right: 10px;
